F/fix btn add list and fixed gap list

--- a/src/assets/styles/cmps/group/AddGroupBtn.scss
+++ b/src/assets/styles/cmps/group/AddGroupBtn.scss
@@ -1,7 +1,19 @@
 .btn-add-group{
+    &:first-child{
+        margin: 0 2px 0 0;
+    }
+    
     width: rem($card-width);
-    height: 40px;
-    // margin: 4px;
-    background-color: #f1f2f4;
+    padding: 14px 16px;
+    height: 48px;
+    background-color: rgba(255, 255, 255, 34%);
     cursor: pointer;
+    border-radius: 12px;
+    margin: 0 12px;
+    transition: background-color 0.4s ease; 
+    color: white;
+    
+    &:hover{
+        background-color: rgba(255, 255, 255, 18%);;
+    }
 }
